--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,6 @@ events {
 }
 
 http {
-    # Ustawienie ścieżek do modułów zainstalowanych przez LuaRocks dla Lua 5.1
     resolver 127.0.0.11 ipv6=off;
     lua_package_path "/usr/local/share/lua/5.1/?.lua;/usr/local/share/lua/5.1/?/init.lua;;";
     lua_package_cpath "/usr/local/lib/lua/5.1/?.so;;";
@@ -22,7 +21,7 @@ http {
 
     server {
         listen 8080;
-        lua_code_cache off;  # W development: off, w produkcji: on
+        lua_code_cache off;
 
         location / {
             default_type text/html;
